# markov

./: Cargo.toml  README.md
src/: main.rs
src/adapters/: memory.rs  mod.rs  rand.rs
src/adapters/discord/: bot.rs  command.rs  handler.rs  mod.rs
src/adapters/rand/: choose.rs  mod.rs  shuffle.rs
src/adapters/sqlite/: repository.rs  schema.rs
src/markov/: bot.rs  chain.rs  choose.rs  links.rs  mod.rs  repository.rs  shuffle.rs  types.rs
